tests/errors/coerce-frame_int.flbgst
x : {}
value : (x To Int) == 5
